add operation ids
